Actualizado cap1 b y prefacio

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -48,6 +48,8 @@ Las arquitecturas en pizarra presentan una serie de inconvenientes importantes, 
 \end{itemize}
 
 \section{¿Qué implica la arquitectura de pizarra?}
+La arquitectura de pizarra implica que no existe interrelación entre los agentes, sólo a través de la pizarra. De esta forma, los agentes colaboran entre ellos para obtener una solución común al problema que se plantea. Por ejemplo, en una plataforma como GitHub, donde distintas personas, de distintos países del mundo, colaboran entre ellos, en este caso, en conseguir hacer una aplicación informática. 
 
 \section{¿Cómo va a ser la plataforma?}
+Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra.
 
