--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -1,5 +1,3 @@
-{\color{red}\lettrine[lines=1,slope=4pt,findent=0pt]{E}{}sto es un prefacio.}\\
-
 \section*{Objetivos y motivaciones}
 Tanto en el ámbito informático académico como en el profesional, en ocasiones puede ser necesario un cambio de sistema operativo a la hora de trabajar. Esto puede estar ocasionado tanto por requisitos del lenguaje a utilizar, por una arquitectura más adecuada o simplemente por cuestión de preferencias. Pero estos cambios implicarían una CPU para cada sistema operativo, lo que lo haría terriblemente ineficiente desde el punto de vista económico, ergonómico y logístico. \\
 Por ello es necesario conocer la arquitectura del software que permita escoger entre más de un sistema operativo, y que el adicional (aún sin llegar al nivel de eficiencia del sistema nativo) trabaje a un nivel óptimo.\\
@@ -14,7 +12,7 @@ Por tanto los dos principales objetivos de la práctica serán:
 Debido a las dos partes claramente diferenciadas e la práctica, se harán dos secciones claramente diferenciadas :
 \begin{itemize}
 \item Parte de OBSERVACIÓN: en la que tras una pequeña introducción se detallará la arquitectura del sistema escogido
-\item Parte de DISEÑO: \textcolor{red}{UNA VEZ ACABADOS LOS REQUISITOS, UML Y DEMÁS ACTUALIZAR ESTA SECCIÓN}
+\item Parte de DISEÑO: se empezará describiendo qué es una arquitectura de pizarra, qué componentes la forman, etc para posteriormente analizar los requisitos y los diagramas UML de los que constará nuestra aplicación, para finalmente, dar un manual básico con las operaciones básicas de nuestra aplicación. 
 \end{itemize}
 
 \section*{¿Por qué GitHub?}
@@ -25,15 +23,12 @@ Para la realización de esta práctica hemos utilizado el software \textbf{GitHu
 	\item Pero principalmente debido a que dicho programa sigue una arquitectura de pizarra y soporta el conocido framework ``Ruby on Rails", lo que nos acercaba a un entorno práctico a los dos aspectos a tratar en la práctica: los framework y la arquitectura de pizarra.
 \end{itemize}
 
+Todos los archivos de esta práctica se encontrarán disponibles en la dirección
+\url{https://github.com/KekoAlk/Practica_DAS}.
+
 \section*{¿Por qué \LaTeX?}
 \LaTeX~ es un sistema de composición de textos profesional que permite separar de forma fácil un único archivo en varios, de forma que trabajar de forma distribuida sea bastante cómoda. Además, los archivos son texto plano por lo que, junto a GitHub, hace que se pueda ver qué se ha añadido o borrado en un documento de forma sencilla. También es un sistema que separa el contenido de la presentación, por lo que facilita centrarse en el contenido y no tanto en su presentación.\\
 
-\color{red}
-FALTA:
-\begin{itemize}
-%\item Explicar la forma de trabajo \textit{(De forma distribuida mediante GitHub)}
-\item Si se hace código, recalcarlo mucho.
-\item Dar paso al inicio de la primera parte.
-\end{itemize}
-\color{black}
+
+
 
