--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -9,7 +9,7 @@ Por tanto los dos principales objetivos de la práctica serán:
 \end{itemize}
 
 \section*{Estructura de la memoria}
-Debido a las dos partes claramente diferenciadas e la práctica, se harán dos secciones claramente diferenciadas :
+Debido a las dos partes claramente diferenciadas de la práctica, la memoria se dividirá en dos secciones:
 \begin{itemize}
 \item Parte de OBSERVACIÓN: en la que tras una pequeña introducción se detallará la arquitectura del sistema escogido
 \item Parte de DISEÑO: se empezará describiendo qué es una arquitectura de pizarra, qué componentes la forman, etc para posteriormente analizar los requisitos y los diagramas UML de los que constará nuestra aplicación, para finalmente, dar un manual básico con las operaciones básicas de nuestra aplicación. 
