Añadido contenido a ¿Cómo va a ser la plataforma?

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -53,3 +53,10 @@ La arquitectura de pizarra implica que no existe interrelación entre los agente
 \section{¿Cómo va a ser la plataforma?}
 Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra.
 
+La plataforma constará de dos partes:
+\begin{itemize}
+	\item \textbf{Pizarra: }Será la estructura que contenga la información. Permite a los agentes interactuar sobre ella, escribiendo y leyendo su contenido.
+	\item \textbf{Librería: }Dará las opciones necesarias para que un programador pueda diseñar un agente que interactúe con la pizarra. 
+\end{itemize}
+
+La implementación de la plataforma se realizará con el lenguaje de programación C++, ya que al ser un lenguaje orientado a objetos nos permite una mayor libertad y comodidad.
