Centrado diagrama casos de usos

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -162,6 +162,7 @@ Por último, los casos de uso de la pizarra son:
 
 \begin{landscape}
 \begin{figure}[!h]
+\vspace*{3cm}
 \centering
 \casos
 \caption{Diagrama de casos de uso}
