FIX algún párrafo

--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -49,7 +49,7 @@ Algunos de los hipervisores tipo 2 más utilizados son: Oracle: VirtualBox, Virt
 \section{Componentes}
 En las figuras mostradas anteriormente, se han hecho referencias a \emph{hardware}, \emph{\gloss{{HYP}}} o \emph{\gloss[long]{MAQVIR}} en las que no explicamos exactamente que significa y por ello, ahora, vamos a analizar cada uno de estas partes descomponiendo sus componentes; es decir, qué elementos lo forman, para después poder juntarlos todos y obtener una idea real de la arquitectura.\\
 
-Vamos a seguir un órden, de menor a mayor nivel, comenzaremos con el \emph{hardware} para terminar con las distintas \emph{VMs}.
+Siguiendo un órden de menor a mayor nivel, comenzaremos con el \emph{hardware} para terminar con las distintas \emph{VMs}.
 
 \subsection{Hardware o Hardware real}
 Quizás lo primero que tengamos que hacer es explicar el encabezado del apartado, ¿Por qué \emph{\textquotedblleft hardware real\textquotedblright}?.\\
@@ -76,7 +76,8 @@ Cualquier sistema operativo se puede descomponer en los archivos del sistema o \
 \caption[Sistema Operativo huésped]{Esquema de componentes de un Sistema Operativo \emph{host} o huésped}
 \end{figure}
 
-Cabe destacar que el hardware se comunica con el sistema operativo a traves de su \emph{kernel} y que cómo estaba representado antes el sistema operativo nos bastaba y esta representación profundiza en término que a nosotros no nos interesan, vamos a quedar con esta representación a partir de ahora:
+Cabe destacar que el hardware se comunica con el sistema operativo a traves de su \emph{kernel}. Pero esta últiima representación profundiza en términos que en estos momentos no nos son de utilidad, por lo que nos vamos a quedar con esta representación
+a partir de ahora:
 
 \begin{figure}[H]
 \begin{center}
