Cosillas sin importancia

--- a/memoria/partes/a/capitulo3.tex
+++ b/memoria/partes/a/capitulo3.tex
@@ -4,7 +4,7 @@
 Pero, antes de nada, es necesario explicar por qué escogemos esta plataforma.
 
 \section{¿Por qué VMware: Workstation?}
-Aunque la respuesta es obvia era necesario dejar una constancia explícita de ello, escogemos esta plataforma pues es la que se encuentran normalmente instalada en los ordenadores de las aulas y laboratorios de la Universidad Rey Juan Carlos.\\
+Aunque la respuesta es obvia era necesario dejar una constancia explícita de ello: hemos escogido esta plataforma pues es la que se encuentran normalmente instalada en los ordenadores de las aulas y laboratorios de la Universidad Rey Juan Carlos.\\
 
 Para llegar a esta conclusión basta con tener acceso de uno de estos ordenadores de sobremesa y los encendamos para su uso, al arrancar descubriremos que sale una ventana con el logo de VMware y con título \emph{VMware: Workstation vX.Y build ZZZZ} siendo X, Y y Z los valores de la versión y compilación utilizada en ese ordenador.
 
@@ -18,7 +18,7 @@ Fijándonos en el proceso de arranque de los ordenadores de la URJC es fácil de
 
 Si buscamos información en la web\cite{refvmware1}, y especialmente en la página oficial\cite{vmwareworkguiaso}\cite{refvmware2}, son muchas las referencias que se hacen a un \emph{SO host}, elemento que sólo se incluye en el tipo 2 de virtualización, siendo este su elemento característico.\\
 
-Por lo tanto concluimos que VMware: Workstation, y por lo tanto los ordenadores de la URJC también, necesitan de un Sistema Operativo base que cumpla los requisitos mínimos, se trata de una virtualización de segundo nivel.
+Por lo tanto concluimos que VMware: Workstation (y por lo tanto los ordenadores de la URJC también) necesitan de un Sistema Operativo base que cumpla los requisitos mínimos. Se trata por tanto de una virtualización de segundo nivel.
 
 \subsection{Especificaciones técnicas}
 Ahora vamos a comprobar las distintas especificaciones que tiene esta plataforma en particular, qué la difiere de un sistema genérico de virtualización de segundo nivel.\\
@@ -32,7 +32,7 @@ Entre las que hemos encontrado nos gustaría destacar:
 \item Soporta la virtualización de sistemas x64 en ordenadores x86.
 \end{itemize}
 
-Pero sin duda, si queremos describir por qué la universidad escogió este sistema, es debido a su potencia para gran cantidad de ordenadores, puesto que en la universidad se da soporte a muchos ordenadores virtualizados, prácticamente todos los de la universidad.
+Pero sin duda si queremos explicar por qué la universidad escogió este sistema, se debe a su potencia para un gran número de ordenadores; tal y como se da el caso de la universidad, donde prácticamente todos los computadores se encuentran virtualizados.
 
 \subsection{Esquema de arquitectura}
 Por tanto, siguiendo la línea del capítulo anterior, este sería el esquema de la arquitectura instalada en los ordenadores de las aulas de la universidad:
