Corregidas algunas cosas

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -107,13 +107,11 @@ A continuación detallamos cada una de las clases que aparecen en el diagrama ce
 \textbf{Usuario:} Permite la modificación y visualización de los datos del usuario, como el nombre, el id, la contraseña y los permisos.
 
 
-\begin{landscape}
-\begin{figure}[!h]
+\begin{sidewaysfigure}
 \centering
 \clases
 \caption{Diagrama de clases}
-\end{figure}
-\end{landscape}
+\end{sidewaysfigure}
 
 \subsection{Diagrama de casos de uso}
 Un diagrama de casos de uso permite la visualización de las actividades que se permite realizar la plataforma. A estas actividades se las denomina \textit{casos de uso}. El diagrama de casos de uso define también los actores o roles que interactúan con la aplicación y las relaciones que existen entre los distintos casos de uso. Las relaciones pueden ser de dos tipos:
@@ -160,14 +158,11 @@ Por último, los casos de uso de la pizarra son:
 \item \textbf{Gestionar permisos} de los usuarios
 \end{itemize} 
 
-\begin{landscape}
-\begin{figure}[!h]
-\vspace*{3cm}
+\begin{sidewaysfigure}
 \centering
 \casos
 \caption{Diagrama de casos de uso}
-\end{figure}
-\end{landscape}
+\end{sidewaysfigure}
 
 \subsection{Diagramas de actividad}
 Un diagrama de actividad es una representación de un proceso de forma gráfica. Consta de una serie de símbolos que representan los distintos pasos a seguir y flechas que indican el flujo de ejecución que se sigue.\\
@@ -223,98 +218,98 @@ Todos los diagramas se muestran a continuación:
 \vspace*{3cm}
 \begin{figure}[!h]
 \centering
-\actualizarPizarra
+\actualizarPizarra\label{fig:actualizarPizarra}
 \caption{Actualizar pizarra}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\buscar
+\buscar\label{fig:buscar}
 \caption{Buscar}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\comparar
+\comparar\label{fig:comparar}
 \caption{Comparar}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\configurarPizarra
+\configurarPizarra\label{fig:configurarPizarra}
 \caption{Configurar pizarra}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\crearCarpeta
+\crearCarpeta\label{fig:crearCarpeta}
 \caption{Crear carpeta}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\comprobarNivel
+\comprobarNivel\label{fig:comprobarNivel}
 \caption{Comprobar nivel}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\crearUsuario
+\crearUsuario\label{fig:crearUsuario}
 \caption{Crear usuario}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\escribir
+\escribir\label{fig:escribir}
 \caption{Escribir}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\lecturaEscritura
+\lecturaEscritura\label{fig:lecturaEscritura}
 \caption{Lectura/Escritura}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\estadisticas
+\estadisticas\label{fig:estadisticas}
 \caption{Estadísticas}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\gestionarPermisos
+\gestionarPermisos\label{fig:gestionarPermisos}
 \caption{Gestionar permisos}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\iniciarSesion
+\iniciarSesion\label{fig:iniciarSesion}
 \caption{Iniciar sesión}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\leer
+\leer\label{fig:leer}
 \caption{Leer}
 \end{figure}
 \newpage
 
 \begin{figure}[!h]
 \centering
-\mostrarEstado
+\mostrarEstado\label{fig:mostrarEstado}
 \caption{Mostrar estado}
 \end{figure}
 \newpage
