Revision 1ª de la Parte I
He revisado a grandes rasgos la primera parte, para comprobar que todo
estaba en orden.

FALTA:
* NO he prestado mucha atención a las faltas, se ha podido colar alguna
* Hay que acabar bien las figuras. Las tres últimas, que son muy
similares, no se hacerlas como es debido.

--- a/memoria/partes/a/capitulo1.tex
+++ b/memoria/partes/a/capitulo1.tex
@@ -73,4 +73,4 @@ Una máquina convencional de tercera generación es recursivamente virtualizable
 
 Este teorema es fundamental, en lo que a nosotros se refiere, pues este último teorema no se cumple para arquitecturas de computadores x86, que casualmente son las que utilizan los computadores de la universidad.\\
 
-Con este impedimento volveremos más adelante, ahora centrémonos en la arquitectura de los sistemas de virtualización.
+Ahora centrémonos en la arquitectura de los sistemas de virtualización.
