--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -76,8 +76,7 @@ Cualquier sistema operativo se puede descomponer en los archivos del sistema o \
 \caption[Sistema Operativo huésped]{Esquema de componentes de un Sistema Operativo \emph{host} o huésped}
 \end{figure}
 
-Cabe destacar que el hardware se comunica con el sistema operativo a traves de su \emph{kernel}. Pero esta últiima representación profundiza en términos que en estos momentos no nos son de utilidad, por lo que nos vamos a quedar con esta representación
-a partir de ahora:
+Cabe destacar que el hardware se comunica con el sistema operativo a traves de su \emph{kernel}. Pero esta última representación profundiza en términos que en estos momentos no nos son de utilidad, por lo que nos vamos a quedar con esta representación:
 
 \begin{figure}[H]
 \begin{center}
@@ -100,7 +99,7 @@ Aun así, existen una serie de elementos comunes para todos ellos, son los refer
 \caption[Componentes hipervisor]{Esquema de componentes del hipervisor}
 \end{figure}
 
-Aquí, al igual que en el caso del sistema operativo (\textit{Véase apartado \ref{sohost}}) utilizaremos el esquema que ya teníamos en lugar de éste a partir de ahora.
+Aquí, al igual que en el caso del sistema operativo (\textit{Véase apartado \ref{sohost}}) utilizaremos el esquema que ya teníamos en lugar de éste.
 
 \subsection{Máquina Virtual}\label{apartadomaqvir}
 Sin necesidad de pensar mucho, y con la comparativa de que una máquina virtual simula el comportamiento de un computador real, es fácil pensar que ésta se compone de manera similar a un computador y acertaríamos, este es su esquema:
