Organizada correctamente la segunda parte
Cambiado el capitulo 3 a capitulo 4 y en su lugar añadido "Arquitectura
y diseño"

--- a/memoria/partes/b/parteB.tex
+++ b/memoria/partes/b/parteB.tex
@@ -1,3 +1,4 @@
 \input{./partes/b/capitulo1.tex}
 \input{./partes/b/capitulo2.tex}
 \input{./partes/b/capitulo3.tex}
+\input{./partes/b/capitulo4.tex}
