--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -1,111 +1,256 @@
-\chapter{Manual de uso de la librería}
-Una vez especificados los requisitos de nuestra pizarra, además de los UML necesarios que describen su funcionamiento, incorporamos un breve manual de usuario con el que un programador ajeno podría construir fácilmente un agente o grupo de agentes que utilicen la pizarra para comunicarse.
-\section{Consideraciones previas}
-Se considerará que nuestro PC cumple con todos los requisitos necesarios para que tanto nuestra librería como nuestra aplicación puedan funcionar sin problemas. Ello conlleva que nuestro PC disponga de conexión a Internet y tenga instalado algún compilador de C++. En definitiva, que se pueda instalar y usar nuestra aplicación sin problemas añadidos.
+\chapter{Arquitectura y Diseño}
 
-\section{Puesta a punto de la aplicación} \label{sec:puesta}
-En primer lugar se detallarán los primeros pasos típicos que realizará nuestra aplicación. Primeramente será necesario conectarnos. Se considerará que el registro (donde se especifican tanto el nombre de usuario como la contraseña) se ha realizado anterior y correctamente, por ejemplo en nuestra aplicación).\\
-
-Existen dos tipos de usuarios: administradores y normales. Los primeros cuentan con más opciones a la hora de organizar la pizarra, tal y como se explicará más adelante. Lo primero de todo, tanto para administradores como para usuarios corrientes será iniciar sesión, que se realizará de la siguiente manera:
-\begin{verbatim}
+Introduccion
 
 
-#include <pizarra.h>
-#include <iostream.h>
+\section{Modelado UML}
+Tras la extracción de los requisitos es necesario documentar la estructura de cada una de las partes que componen la plataforma a crear. Para esto usamos el lenguaje de modelado UML.\\
+%UML es un lenguaje de modelado para visualizar, especificar y documentar de forma gráfica cada una de las partes del desarrollo software. \\
 
-using namespace std;
-
-Agente app = new Agente(loginuser, passuser, new Pizarra(IP, puerto, nombre)); 
-//Creamos un agente con los parámetros que hemos introducido por teclado
-
-Usuario user = app.iniciarSesion(app.getUser(), pass); 
-//Llama al método que nos permitirá iniciar sesión
-
-if(user != null){ 
-// Si el usuario ha introducido sus datos correctamente 
-y éstos se encuentran en la base de datos
-
-}else{            
-// No ha encontrado el usuario o la contraseña incorrecta, y 
-se mostrará el pertinente mensaje 
-
-    Pizarra.existe(user) ? cout << "Contraseña incorrecta":
-    cout << "Nombre de usuario incorrecto";
-}
-\end{verbatim}
-
-A continuación se hará una breve descripción de las funcionalidades de las que dispone un agente:
-\section{Funcionalidades y ejemplos}
-\subsection{Iniciar sesión}
-Como ya se ha explicado en el apartado de primeros pasos (Véase apartado \ref{sec:puesta}) , este método será invocado constantemente por parte de los usuarios de nuestra aplicación, y su funcionamiento es el siguiente:\\
-En primer lugar el usuario deberá introducir su nombre de usuario y contraseña formados por sendos string que se parametrizarán en iniciarSesión(string userid, string pass). A continuación la clase Pizarra recibe dichos parámetros en pizarra.buscar(string userid , string pass), que consultará en la base de datos si los parámetros introducidos son correctos. Si lo han sido, devolverá el usuario con sus correspondientes permisos, lo que permitirá al agente comprobar que puede y que no puede hacer.
-
-\subsection{Mostrar estadísticas}\label{sec:est}
-Esta funcionalidad permite saber las estadísticas a nivel de usuario, es decir, el número de archivos editados, permisos cambiados, datos borrados etc. Para ello será necesario que el agente introduzca su nombre de usuario, que mediante mostrarEstadísticas(string userid) se comunicará con la pizarra, y finalmente con la clase Estadísticas, mediante la cual se podrán consultar los cambios realizados por cada usuario, además de la opción de refrescar las estadísticas (por si durante la consulta de dichas estadísticas otro usuario realiza alguna opción que modifique las ahora obsoletas).
-\subsection{Mostrar estadísticas generales}
-Funciona de un modo muy parecido a mostrar estadísticas (Véase apartado \ref{sec:est}), con la diferencia de que ahora podremos consultar las estadísticas a nivel global, de todos los usuarios como un solo grupo de trabajo. Esto permitirá consultar el número de archivos subidos al repositorio, archivos borrados,... pero todo desde un punto de vista grupal.
-\subsection{Escribir}
-Es una operación básica de la pizarra, junto a leer y lectura/escritura. Esta operación permite tanto añadir como modificar archivos de la pizarra. Esta operación está limitada por los permisos del usuario que quiera escribir (salvo el Admin).\\
-Para poder escribir será necesario que el agente especifique el archivo que se quiere editar, así como su dirección. A continuación, la pizarra comprobará mediante Pizarra.getPermiso() si el usuario dispone de los permisos necesarios. En caso afirmativo, se procede a subir y modificar la pizarra con los nuevos archivos. Finalmente, se hace una llamada a la base de datos para actualizar los nuevos archivos. Por el contrario si el usuario no contaba con los permisos pertinentes, se le notificará y no se producirá ningún cambio.\\
-Debido a la importancia de esta funcionalidad se adjunta un pequeño código de ejemplo (consideramos que ya ha iniciado sesión) :
-\begin{verbatim}
+En primer lugar diseñaremos un diagrama de clases que permita una visión general de las clases que componen la plataforma y su relación, para después incluir un diagrama de casos de uso que permite ver de una forma más detallada los requisitos extraídos anteriormente así como su relación con los distintos actores. Para finalizar, analizaremos de forma detallada y mediante diagramas de actividad cada uno de los casos de uso resultantes.\\
 
 
-#include <pizarra.h>
-#include <iostream.h>
+\subsection{Diagrama de clases}
+Un diagrama de clases es un diagrama estático destinado a la programación orientada a objetos que permite describir las clases de un sistema, así como sus propiedades, operaciones, relaciones entre ellas y herencia.\\
 
-using namespace std;
+A continuación detallamos cada una de las clases que aparecen en el diagrama centrándose en la funcionalidad y las relaciones entre ellas. Para una descripción más en profundidad de las operaciones que implementa ver Manual de uso.\\
 
-Agente app = new Agente(loginuser, passuser, new Pizarra(IP, puerto, nombre)); 
-//Creamos un agente con los parámetros que hemos introducido por teclado
+\textbf{Pizarra:} El diagrama de clases se centra en esta clase. Contiene las operaciones necesarias para que los agentes puedan interactuar con ella. Almacena los datos relacionados con el estado de la pizarra, así como la lista de usuarios, las estadísticas, los permisos y la configuración.\\
 
-Usuario user = app.escribir("C:\Program files", Archivo ejemplo); 
-//Llama al método que nos permitirá iniciar sesión
+\textbf{Agente:} Permite interactuar con la pizarra, dando opciones para leer o escribir en la misma, así como modificar su configuración o permisos. Hace las veces de interfaz al usuario para usar la pizarra. Contiene el nombre de usuario y la contraseña con la que se interactúa con la pizarra.\\
 
-if(user.getPermiso() ==1){ 
-// El usuario dispone de los permisos necesarios
+\textbf{Estado:} Contiene la lista de elementos.\\
 
-}else{            
-// No tiene los permisos y salta un mensaje de advertencia
+\textbf{Elemento:} Puede ser de dos tipos, representado como herencia. Un archivo o una carpeta. Una carpeta contendrá a su vez un listado de elementos.\\
 
-    Pizarra.existe(user) ? cout << "No dispone de los permisos necesarios":
-}
-\end{verbatim}
-\subsection{Lectura/Escritura}
-Lectura/Escritura funciona de manera análoga a escribir, salvo que en esta operación se permite también leer.
-\subsection{Leer}
-Esta operación es análoga a escribir, salvo que en lugar de escribir se leen archivos.
+\textbf{Nivel: }Proporciona las operaciones necesarias para comprobar y editar los permisos de la pizarra.\\
 
-\subsection{Mostrar estado}
-Permite mostrar el estado actual de la pizarra, es decir, el número de usuarios totales, el número de archivos en la pizarra, el historial de todas las modificaciones, etc.
+\textbf{Configuración: }Permite la visualización y modificación de las configuraciones de la pizarra.\\
 
-\subsection{Buscar}
-Permite buscar archivos en la pizarra. Se podrán especificar varios parámetros de búsqueda, como podrían ser el nombre, tamaño, extensión, modificación, etc. El agente debe introducir un String con el nombre del archivo deseado y se facilitará una lista con los archivos encontrados, en caso de que los hubiera.
-\subsection{Comparar}
-Permite comparar dos archivos, pudiendo por tanto apreciar las diferencias existentes en aspectos como tamaño, formato o líneas modificadas. Para ello será necesario que el agente introduzca el archivo en comparar(Archivo archivo), y al igual que en otras funcionalidades se guardará el usuario que ha realizado dicha comparación. Finalmente se devuelve un archivo donde se indican las diferencias.
+\textbf{Estadísticas: }Permite visualizar las estadísticas.\\
 
-\subsection{Crear Carpeta}
-Permite crear una carpeta dentro de la pizarra.Para ello será necesario introducir la ruta y nombre de la carpeta que deseamos crear (debe tener un nombre único), que en crearCarpeta(string direccion, string nombre), que se comunica con pizarra.crearCarpeta(), que además de precisar los dos anteriores datos guardará el usuario que ha creado la carpeta y los permisos que tiene.
+\textbf{Usuario:} Permite la modificación y visualización de los datos del usuario, como el nombre, el id, la contraseña y los permisos.
 
-\subsection{Crear Usuario}
-Permite crear nuevos agentes en la pizarra. Esta función solo puede ser usada por el Administrador. Para ello se deberán introducir como viene siendo habitual el nombre de usuario y la contraseña. La pizarra comprobará que el efectivamente se trata del administrador consultando en la base de datos el nivel asociado al nombre de usuario. Si el resultado es satisfactorio, se invocará el método crearUsuario(), donde se deberán especificar el nuevo nombre de usuario, contraseña, y nivel que dispondrá el nuevo usuario. Finalmente se comprobará que el nombre de usuario deseado no esté ya en uso, en cuyo caso se deberá cambiar.
-\subsection{Gestionar permisos}
-Una explicación más detallada precisan los permisos, que pueden tener los distintos usuarios. En nuestra aplicación los usuarios podrán tener los 3 permisos básicos típicos, tal y como se explica en la siguiente tabla: \\
 
-\begin{center}
-\begin{tabular}{|c|c|c|}
-\hline
-Número & Permiso  & Descripción \\
-\hline
-0& Leer & El usuario puede obtener información de la pizarra\\
-1& Escribir & El usuario puede añadir datos a la pizarra\\
-2& Buscar & El usuario puede buscar archivos en la pizarra\\
-\hline
-\end{tabular}
-\end{center}
+\begin{sidewaysfigure}
+\centering
+\clases
+\caption{Diagrama de clases}
+\end{sidewaysfigure}
 
-Dichos permisos sólo pueden ser modificados por el usuario Administrador mediante agente.gestionarPermisos() que invocará a pizarra.gestionarPermisos() y  finalmente a \\ Nivel.cambiarPermiso() donde se podrán especificar los nuevos permisos del usuario. El administrador dispondrá de todos los permisos.
+\subsection{Diagrama de casos de uso}
+Un diagrama de casos de uso permite la visualización de las actividades que se permite realizar la plataforma. A estas actividades se las denomina \textit{casos de uso}. El diagrama de casos de uso define también los actores o roles que interactúan con la aplicación y las relaciones que existen entre los distintos casos de uso. Las relaciones pueden ser de dos tipos:
 
-\subsection{Configurar pizarra}
-Mediante esta función podemos configurar algunos aspectos de nuestra pizarra, como podrían ser asuntos de conexión, máximo de conexiones simultáneas, número máximo de usuarios permitidos y algunas opciones de depuración. Para ello será necesario que el agente acceda a configurarPizarra(Configuración config), para que a continuación la pizarra reciba la configuración nueva, además del usuario que la ha definido.
+\begin{itemize}
+	\item \textbf{Inclusión:} Un caso de uso depende del resultado de otro.
+	\item \textbf{Extensión:} Un caso de uso se extiende en otros casos que, son esencialmente similares pero varían ligeramente su comportamiento.
+\end{itemize}
 
+En nuestro caso, nuestra aplicación consta de tres actores:
+\begin{itemize}
+\item \textbf{Usuario}
+\item \textbf{Administrador:} es un usuario normal, pero con funcionalidad añadida; sólo existe uno en el sistema.
+\item \textbf{Pizarra:} es el actor principal de nuestra aplicación; es el responsable de interrelacionar a los usuario y al administrador.   
+\end{itemize}
+
+Los casos de uso más importantes para los usuarios son:
+\begin{itemize}
+\item \textbf{Iniciar sesión} en la pizarra
+\item \textbf{Ver estadísticas} 
+\item \textbf{Escribir (in)} en la pizarra
+\item \textbf{Leer (out)} en la pizarra
+\item \textbf{Lectura/Escritura (rd)} en la pizarra
+\item \textbf{Mostrar estado}
+\item \textbf{Buscar} en la pizarra
+\item \textbf{Comparar} archivos en la pizarra
+\item \textbf{Crear carpeta} en la pizarra
+\end{itemize}
+
+Los casos de uso para el Administrador son los mismos que los del usuario y además puede:
+\begin{itemize}
+\item \textbf{Crear usuario} en la pizarra
+\item \textbf{Gestionar permisos} de los usuarios
+\item \textbf{Configurar la pizarra}
+\item \textbf{Actualizar estado} de la pizarra
+\end{itemize}
+
+Por último, los casos de uso de la pizarra son:
+\begin{itemize}
+\item \textbf{Mostrar estado}
+\item \textbf{Buscar}
+\item \textbf{Comparar} archivos
+\item \textbf{Crear carpeta}
+\item \textbf{Gestionar permisos} de los usuarios
+\end{itemize} 
+
+\begin{sidewaysfigure}
+\centering
+\casos
+\caption{Diagrama de casos de uso}
+\end{sidewaysfigure}
+
+\subsection{Diagramas de actividad}
+Un diagrama de actividad es una representación de un proceso de forma gráfica. Consta de una serie de símbolos que representan los distintos pasos a seguir y flechas que indican el flujo de ejecución que se sigue.\\
+
+Como es común hemos realizado un diagrama de actividad para cada uno de los casos de uso que aparecen en el diagrama anterior.
+
+\begin{itemize}
+\item \textbf{Actualizar Pizarra:} éste es uno de los estados básicos de la pizarra, ya que cada vez se escribe o se borra algún archivo hay que hacer uso de éste.\\
+Los pasos que sigue son obtener los nuevos datos de la pizarra, conectarse con la base de datos, guardar estos cambios y notificarlo.
+
+\item \textbf{Buscar:} este caso de uso busca entre los datos de la pizarra y devuelve los datos en caso de que se hayan encontrado de acuerdo a los datos de la búsqueda.\\
+Los pasos que se siguen son iniciar sesión, en caso de que los datos sean correctos, se introducen los datos de la búsqueda, se muestran estos datos si se han producido resultados, se actualiza la pizarra y finalmente se notifica.
+
+\item \textbf{Comparar:} este caso de uso compara dos o más archivos y devuelve si se ha modificado algo y qué es lo que se ha modificado.\\
+Los pasos que se siguen son iniciar sesión, se introducen los datos para comparar, se muestran los resultados si los hay, se actualiza la pizarra y se notifica.
+
+\item \textbf{Configurar pizarra:} este caso de uso sirve para configurar la pizarra, cambiando los distintos parámetros.\\
+Los pasos que siguen son iniciar sesión, se configura la pizarra, se actualiza la pizarra y se notifica al usuario.
+
+\item \textbf{Crear carpeta:} este caso de uso permite crear nuevas carpetas a los usuarios.\\
+Los pasos que sigue son se inicia sesión, se crea la carpeta, se actualiza la pizarra y se notifica al usuario.
+
+\item \textbf{Comprobar nivel:} este caso de uso permite comprobar el nivel en el que se encuentra el usuario.\\
+Los pasos a seguir son obtener los datos del usuario, conectar con la base de datos, buscar la información del usuario y mostrar las opciones del nivel.
+
+\item \textbf{Crear usuario:} este caso de uso está restringido sólo al administrador. Crea un nuevo usuario en la pizarra.\\
+Los pasos a seguir son iniciar sesión, introducir los datos del usuario, conectar con la base de datos para comprobar que los datos introducidos son correctos, se crea el nuevo usuario, se actualiza la base de datos y se notifica. En caso de que no se pueda iniciar sesión o los datos introducidos no sean válidos, también se notifica.
+
+\item \textbf{Escribir (in):} éste es uno de las operaciones básicas de la pizarra. Escribe un nuevo dato en la pizarra.\\
+Los pasos a seguir son iniciar sesión, escribir los datos que se quieren que se escriban, actualizar la pizarra y notificárselo al usuario.
+
+\item \textbf{Lectura/Escritura (rd):} este caso de uso permite tanto leer como escribir en la pizarra.\\
+Los pasos a seguir son iniciar sesión, leer datos de la pizarra, obtener la posición donde se va a escribir, escribir los datos, actualizar los datos y notificar los cambios producidos.
+
+\item \textbf{Estadísticas:} permite ver las estadísticas de un determinado usuario.\\
+Los pasos a seguir son iniciar sesión, introducir datos de las estadísticas buscadas, conectar con la base de datos, buscar las estadísticas y se muestran los resultados, si los hay.
+
+\item \textbf{Gestionar permisos:} permite cambiar los permisos tanto de lectura como de escritura de un determinado usuario.\\
+Los pasos a seguir son iniciar sesión, introducir datos del usuario a cambiar los permisos, conectar con la base de datos, se busca el usuario, si existe, se gestionan los permisos y se actualiza la base de datos, en caso contrario, se notifica que el usuario no existe.
+
+\item  \textbf{Iniciar sesión:} se introduce el id de usuario y la contraseña para poder tener acceso.\\
+Los pasos a seguir son introducir los datos (id de usuario y contraseña), conectar con la base de datos, se comprueban si los datos son válidos, si lo son se establece la conexión, se comprueban los permisos y se notifica, y si no son válidos también se notifica.
+
+\item  \textbf{Leer (out):} leer datos de la pizarra.\\
+Los pasos a seguir son iniciar sesión, leer datos que se van a leer, actualizar la pizarra y se notifica.
+
+\item \textbf{Mostrar estado:} muestra el estado actual de la pizarra.\\
+Los pasos a seguir son iniciar sesión, se muestra el estado de la pizarra, se actualiza la pizarra y se notifica al usuario.
+\end{itemize}
+
+Todos los diagramas se muestran a continuación: 
+
+\vspace*{3cm}
+\begin{figure}[!h]
+\centering
+\actualizarPizarra\label{fig:actualizarPizarra}
+\caption{Actualizar pizarra}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\buscar\label{fig:buscar}
+\caption{Buscar}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\comparar\label{fig:comparar}
+\caption{Comparar}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\configurarPizarra\label{fig:configurarPizarra}
+\caption{Configurar pizarra}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\crearCarpeta\label{fig:crearCarpeta}
+\caption{Crear carpeta}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\comprobarNivel\label{fig:comprobarNivel}
+\caption{Comprobar nivel}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\crearUsuario\label{fig:crearUsuario}
+\caption{Crear usuario}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\escribir\label{fig:escribir}
+\caption{Escribir}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\lecturaEscritura\label{fig:lecturaEscritura}
+\caption{Lectura/Escritura}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\estadisticas\label{fig:estadisticas}
+\caption{Estadísticas}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\gestionarPermisos\label{fig:gestionarPermisos}
+\caption{Gestionar permisos}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\iniciarSesion\label{fig:iniciarSesion}
+\caption{Iniciar sesión}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\leer\label{fig:leer}
+\caption{Leer}
+\end{figure}
+\newpage
+
+\begin{figure}[!h]
+\centering
+\mostrarEstado\label{fig:mostrarEstado}
+\caption{Mostrar estado}
+\end{figure}
+\newpage
+
+\subsection{Diagramas de secuencia}
+
+El diagrama de secuencia es un diagrama UML utilizado para modelar la interacción entre objetos. Este diagrama se modela para cada caso de uso. Consta de dos tipos de mensajes:
+\begin{enumerate}
+	\item \textbf{Síncrono: }Corresponden con llamadas a métodos. Se representan con flechas rellenas en negro.
+	\item \textbf{Asíncrono: }Terminan inmediatamente y crean un nuevo hilo de ejecución dentro de la secuencia. Se representan con flechas sin rellenar.
+\end{enumerate}
+
+Los diagramas de secuencia correspondientes a los casos de uso de nuestra plataforma se ponen a continuación.
+
+\begin{figure}[!h]
+\centering
+\seqIniciarSesion
+\caption{Diagrama de secuencia de iniciar sesión}
+\end{figure}
