[FIX] Duplicado de modelos
Con mi último commit deje por error la parte de diseño por duplicado.

--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -1,6 +1,6 @@
 \chapter{Arquitectura y Diseño}
 
-Introduccion
+\lettrine[lines=1,slope=4pt,findent=0pt]{I}{}ntroduccion
 
 
 \section{Modelado UML}
