--- a/memoria/partes/b/capitulo4.tex
+++ b/memoria/partes/b/capitulo4.tex
@@ -1,5 +1,5 @@
 \chapter{Manual de uso de la librería}
-Una vez especificados los requisitos de nuestra pizarra, además de los UML necesarios que describen su funcionamiento, incorporamos un breve manual de usuario con el que un programador ajeno podría construir fácilmente un agente o grupo de agentes que utilicen la pizarra para comunicarse.
+\lettrine[lines=1,slope=4pt,findent=0pt]{U}{}na vez especificados los requisitos de nuestra pizarra, además de los UML necesarios que describen su funcionamiento, incorporamos un breve manual de usuario con el que un programador ajeno podría construir fácilmente un agente o grupo de agentes que utilicen la pizarra para comunicarse.
 \section{Consideraciones previas}
 Se considerará que nuestro PC cumple con todos los requisitos necesarios para que tanto nuestra librería como nuestra aplicación puedan funcionar sin problemas. Ello conlleva que nuestro PC disponga de conexión a Internet y tenga instalado algún compilador de C++. En definitiva, que se pueda instalar y usar nuestra aplicación sin problemas añadidos.
 
